Updating the sensitivity services of the remaining sensors of the interface phidget; Some bug fixes too